Add backtracking to XY chains strategy